--- a/templates/start.html
+++ b/templates/start.html
@@ -81,7 +81,7 @@
           <span class="btn btn-primary mt-2 btn-sm" id="home_id"><i class="fa fa-home"></i> go to Home</span>
           <span class="btn btn-danger mt-2 btn-sm" id="refresh_id"><i class="fa fa-youtube-play"></i> subscribe us</span>
       </div>
-      <div class="container">
+      <div class="my-vp-container">
         <!--error part start-->
         <div class="alert alert-danger text-center mt-4" id="danger_alert" style="display: none;" role="alert">
           </div>
